# SystemLogLLM

./: .gitignore  README.md  pyproject.toml
Dataset/: template.py
Processing/Dataset/: base_dataset.py
Processing/finetuning/: adfs_qwen2.py  base_finetuning.py  download_qwen.py  hdfs_qwen2.py  openstack_qwen2.py  thunderbird_qwen2.py
Processing/finetuning/Experiment/: download.ipynb
src/SystemLogLLM/: main.py
