[project]
name = "systemlogllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "peft>=0.17.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "trl>=0.21.0",
]
